# gtfs-performant

./: .gitignore  LICENSE  Makefile  README.md  dev.sh  ha.sh  hacs.json  pyproject.toml  requirements.txt  test_config.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.home-assistant.yml  docker-compose.yml  ha-config.yaml  post-create.sh  run.sh
.github/workflows/: hacs.yaml  hassfest.yaml
custom_components/gtfs_performant/: __init__.py  __main__.py  config_flow.py  config_flow_backup.py  config_flow_simple.py  database.py  gtfs_loader.py  gtfs_loader_optimized.py  hacs.json  manifest.json  realtime.py  sensor.py  services.yaml  strings.json
custom_components/gtfs_performant/translations/: en.json
custom_components/gtfs_performant/www/: gtfs-departures-card.js
